# tap-sendgrid

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
tap_sendgrid/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
