[tool.poetry]
name = "Mindhive-tap-sendgrid"
version = "0.0.1"
description = "`tap-sendgrid` is a Singer tap for SendGrid, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Nelis Verhoef"]
keywords = [
    "ELT",
    "SendGrid",
]
license = "Apache 2.0"
packages = [
    { include = "tap_sendgrid" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = { version="^0.21.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
requests = "^2.28.2"
sendgrid = "^6.9.7"
ipykernel = "^6.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"
types-requests = "^2.28.11.12"
pre-commit = "^3.1.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sendgrid"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sendgrid = 'tap_sendgrid.tap:TapSendGrid.cli'
